# auto-git-pull

./: .env.example  .gitignore  Cargo.toml  README.md  repos.txt.example  repos.txt.examples
src/: main.rs
