[package]
name = "auto-git-pull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_path_to_error = "0.1.4"
async-trait = "0.1.50"
chrono = { version = "0.4.19", default-features = false, features = ["serde", "clock"] }
url = { version = "2.2.2", features = ["serde"] }
hyperx = "1.3.0"
snafu = { version = "0.7", features = ["backtraces"] }
once_cell = "1.7.2"
arc-swap = "1.3.0"
base64 = "0.13.0"
bytes = "1.0.1"
jsonwebtoken = "8"
futures-core = { version = "0.3.15", optional = true }
futures-util = { version = "0.3.15", optional = true }
secrecy = "0.8.0"
cfg-if = "1.0.0"